:bug: align-items: startのワーニングを解消

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -68,7 +68,7 @@ a:hover {
 /* headerの固定 */
 .body-wrapper {
   background-color: red;
-  align-items: start;
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -111,7 +111,7 @@ header {
 
 /* sidebarの固定 */
 .sidebar-wrapper {
-  align-items: start;
+  align-items: flex-start;
 }
 
 .sidebar {
